force-app/main/default/objects/Tarea__c/fields/Fecha_de_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vencimiento__c</fullName>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>