force-app/main/default/objects/Tarea__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>